@@ -41,6 +41,7 @@ import org.json.JSONObject;
 import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -60,11 +61,11 @@ import timber.log.Timber;
  */
 public class EditShippingPresenterImpl implements EditShippingPresenter {
 
-    private EditShippingViewListener view;
+    private final EditShippingViewListener view;
 
-    private EditShippingRetrofitInteractor editShippingRetrofitInteractor;
+    private final EditShippingRetrofitInteractor editShippingRetrofitInteractor;
 
-    private RevGeocodeUseCase revGeocodeUseCase;
+    private final RevGeocodeUseCase revGeocodeUseCase;
 
     private ShopShipping shopInformation;
 
@@ -72,11 +73,11 @@ public class EditShippingPresenterImpl implements EditShippingPresenter {
 
     private List<ProvinceCitiesDistrict> provinceCitiesDistrict;
 
-    private List<String> activatedServices = new ArrayList<>();
+    private final List<String> activatedServices = new ArrayList<>();
 
-    private Map<String, String> serviceCourierPair = new HashMap<>();
+    private final Map<String, String> serviceCourierPair = new HashMap<>();
 
-    private Set<String> activatedCourier = new HashSet<>();
+    private final Set<String> activatedCourier = new HashSet<>();
 
     private String temporaryWebViewResource;
 
@@ -86,13 +87,13 @@ public class EditShippingPresenterImpl implements EditShippingPresenter {
 
     private DistrictRecommendationAddress selectedAddress;
 
-    private UserSessionInterface userSession;
+    private final UserSessionInterface userSession;
 
-    private ValidateShippingUseCase validateShippingUseCase;
+    private final ValidateShippingUseCase validateShippingUseCase;
 
     private ValidateShippingModel validateBoData;
 
-    private ValidateShippingMapper validateShippingMapper;
+    private final ValidateShippingMapper validateShippingMapper;
 
     public EditShippingPresenterImpl(EditShippingViewListener view) {
         this.view = view;
@@ -669,15 +670,15 @@ public class EditShippingPresenterImpl implements EditShippingPresenter {
     public void setSavedInstance(Bundle savedInstanceState) {
         if (savedInstanceState != null
                 && savedInstanceState.containsKey(EditShippingFragment.CURRENT_COURIER_MODEL)) {
-            setShopModelFromSavedInstance((EditShippingCouriers) savedInstanceState
+            setShopModelFromSavedInstance(savedInstanceState
                     .getParcelable(EditShippingFragment.CURRENT_COURIER_MODEL));
         } else if (savedInstanceState != null
                 && savedInstanceState.containsKey(EditShippingFragment.CURRENT_OPEN_SHOP_MODEL)) {
-            setOpenShopModelFromSavedInstance((OpenShopData) savedInstanceState
+            setOpenShopModelFromSavedInstance(savedInstanceState
                     .getParcelable(EditShippingFragment.CURRENT_OPEN_SHOP_MODEL));
         } else if (savedInstanceState != null
                 && savedInstanceState.containsKey(EditShippingFragment.RESUME_OPEN_SHOP_DATA_KEY)) {
-            setOpenShopModelFromSavedInstance((OpenShopData) savedInstanceState
+            setOpenShopModelFromSavedInstance(savedInstanceState
                     .getParcelable(EditShippingFragment.RESUME_OPEN_SHOP_DATA_KEY));
         }
     }
@@ -836,7 +837,7 @@ public class EditShippingPresenterImpl implements EditShippingPresenter {
             String[] pairs = query.split("&");
             for (String pair : pairs) {
                 int idx = pair.indexOf("=");
-                queryPairs.put(URLDecoder.decode(pair.substring(0, idx), "UTF-8"), URLDecoder.decode(pair.substring(idx + 1), "UTF-8"));
+                queryPairs.put(URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8), URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8));
             }
         }
         return queryPairs;
